# dubrayn.github.io

./: AUTHORS  IPS-DEV-TP.html  IPS-DEV.html  IPS.html  LICENSE.md  README.md  TODO  index.html  publish_to_sourceforge.io.sh  test_cea.html  test_ensiie.html  toc.html
IPS/: .content.md.swp  content.md
IPS-DEV/: armadillo.html  astyle.html  content.md  cppfiles.html  cppheaders.html  cxxtest.html  doxygen.html  git.html  gitgraphs.js  index.html  intro.html  latex.html  make.html  markdown.html  project.html  python.html  quadratures.html  quantumintro.html  typst.html
IPS-DEV-TP/: content.md  index.html
IPS-DEV/example_plotly/: example.html
IPS-DEV/scripts/: git_init.cast
IPS-DEV/test_doxygen/: Doxyfile  test.cpp
IPS-PROD/: advanced-python.html  advancedgit.html  blender.html  gdb.html  git-advanced.html  gitgraph2.js  index.html  intro.html  numpy.html  perf.html  plot.html  povray.html  project.html  refactoring.html  sumoptim.html  valgrind.html
IPS-PROD-TP/: index.html
IPS-PROD-TP/files/: rho.arma
PSA/: exceptions.html  fdm.html  index.html  integration.html  intro.html  mongo.html  mongodb.html  monitoring.html  mpi4py.html  multiprocessing.html  paraview.html  pip.html  project.html  pythonandc.html  swig.html  vtk.html
PSA/scripts/: manylinux.cast  pip_module.cast  setuptools.cast  venv_create.cast  vtk_cpp.cast
PYTHON/: exercises.ipynb  exercises2.ipynb  index.html  intro.html
core/css/: animate.css  asciinema-player.css  cinescript.css  gitgraph.css  jstree.css  katex.css  mermaid.css  style_cea.css  style_core.css  style_ensiie.css  style_nathalie.css
core/fonts/: mono.css
examples/armanpy_pip/: MANIFEST.in  README.md  armanpypsa.i  go.sh  pyproject.toml  requirements.txt  setup.py
examples/armanpy_pip/armanpy/: armanpy_3d.i
examples/armanpy_pip/test_package/: test.py
examples/vtk/vtk_hello_world_cpp/: CMakeLists.txt  vtk_hello_world.cpp
index/: content.md
template/: SphereSource.js  gitgraphs.js  index.html  index_cea.html  vtk00.html
template_cea/: images  index.html  scripts  videos
template_ensiie/: index.html
test_cea/: content.md  index.html
test_ensiie/: content.md  index.html
toc/: index.html
tps/: evaluation.ipynb  tp1.ipynb  tp2.ipynb  tp3.ipynb  tp3_corrige.ipynb
(+248 files in other folders)
