[build-system]
requires = ["setuptools>=59.6.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "armanpypsa"
version = "0.0.11"
authors = [
  { name="Dubray N.", email="noel.dubray@gmail.com" },
]
description = "Test package for teaching purposes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/dubrayn/dubrayn.github.io"
"Bug Tracker" = "https://github.com/dubrayn/dubrayn.github.io/issues"
